fixed category not showing from page category issue

--- a/product/static/category.scss
+++ b/product/static/category.scss
@@ -463,6 +463,7 @@
     .filter{
         float: right;
         margin-right: 1rem;
+        display: block;
         a{
             height: 43px;
             // width: 120px;
